slight change in the dice loss: add compute_dice_iou function

--- a/check.ipynb
+++ b/check.ipynb
@@ -680,8 +680,44 @@
     "def cross_entropy():\n",
     "    pass\n",
     "\n",
-    "def dice_loss(logits, targets, num_classes, epsilon=1e-6):\n",
+    "\n",
+    "## for dice loss:\n",
+    "def compute_dice_iou(probs, targets_one_hot, epsilon=1e-6, return_iou=False):\n",
     "    \"\"\"\n",
+    "    Compute Dice score and optionally IoU score.\n",
+    "\n",
+    "    Args:\n",
+    "        probs: Tensor of shape (N, C, H, W) - probabilities after softmax\n",
+    "        targets_one_hot: Tensor of shape (N, C, H, W) - one-hot encoded targets\n",
+    "        epsilon: smoothing factor\n",
+    "        return_iou: bool, whether to also compute and return IoU scores\n",
+    "\n",
+    "    Returns:\n",
+    "        dice_score (scalar or per-class)\n",
+    "        optionally iou_score\n",
+    "    \"\"\"\n",
+    "    dims = (0, 2, 3)  # sum over batch, height, width\n",
+    "    intersection = torch.sum(probs * targets_one_hot, dims)\n",
+    "    cardinality = torch.sum(probs + targets_one_hot, dims)\n",
+    "\n",
+    "    dice_per_class = (2. * intersection + epsilon) / (cardinality + epsilon)\n",
+    "    \n",
+    "    # Handling binary vs multi-class Dice score averaging\n",
+    "    if probs.shape[1] == 2:\n",
+    "        dice_score = dice_per_class[1]  # Only use foreground class\n",
+    "    else:\n",
+    "        dice_score = dice_per_class.mean()  # Average over all classes\n",
+    "\n",
+    "    if return_iou:\n",
+    "        union = cardinality - intersection\n",
+    "        iou_per_class = (intersection + epsilon) / (union + epsilon)\n",
+    "        iou_score = iou_per_class.mean()\n",
+    "        return dice_score, iou_score\n",
+    "    \n",
+    "    return dice_score\n",
+    "\n",
+    "def dice_loss(logits, targets, num_classes, epsilon=1e-6):\n",
+    "    \"\"\" \n",
     "    Computes multi-class Dice loss.\n",
     "\n",
     "    Args:\n",
@@ -694,26 +730,17 @@
     "        Scalar Dice loss\n",
     "    \"\"\"\n",
     "    # Convert targets to one-hot encoding\n",
-    "    targets_one_hot = F.one_hot(targets, num_classes).permute(0, 3, 1, 2).float()  # (N, C, H, W)\n",
-    "\n",
-    "    # Apply softmax to logits \n",
-    "    probs = F.softmax(logits, dim=1)  # (N, C, H, W)\n",
-    "\n",
-    "    # Calculate per-class Dice score\n",
-    "    ### ?? Check whether this work as intended or not ??\n",
-    "    dims = (0, 2, 3)  # sum over batch, height, width\n",
-    "    intersection = torch.sum(probs * targets_one_hot, dims)\n",
-    "    cardinality = torch.sum(probs + targets_one_hot, dims)\n",
-    "\n",
-    "    dice_per_class = (2. * intersection + epsilon) / (cardinality + epsilon)\n",
+    "    targets_one_hot = F.one_hot(targets, num_classes).permute(0, 3, 1, 2).float() # (N, C, H, W)\n",
+    "    # Apply softmax to logits\n",
+    "    probs = F.softmax(logits, dim=1)# (N, C, H, W)\n",
     "    \n",
-    "    #?? I need to test this mean because I am not sure whether the dimension wise it is correct or not ??\n",
-    "    # Handling binary vs multi-class\n",
-    "    if num_classes == 2:\n",
-    "        dice_loss_value = 1. - dice_per_class[1]  # Only use foreground class\n",
-    "    else:\n",
-    "        dice_loss_value = 1. - dice_per_class.mean()  # Average over all classes\n",
-    "        \n",
+    "    # Calculate per-class Dice score using the helper function\n",
+    "    ### ?? Check whether this work as intended or not ??\n",
+    "    dice_score = compute_dice_iou(probs, targets_one_hot, epsilon)\n",
+    "    \n",
+    "    # calculate the dice score\n",
+    "    dice_loss_value = 1. - dice_score\n",
+    "\n",
     "    return dice_loss_value\n",
     "\n",
     "\n",
