changes in loss functions and in trainer (wtd avg, metric logging)

--- a/check.ipynb
+++ b/check.ipynb
@@ -704,19 +704,22 @@
     "    \n",
     "    # Handling binary vs multi-class Dice score averaging\n",
     "    if probs.shape[1] == 2:\n",
-    "        dice_score = dice_per_class[1]  # Only use foreground class\n",
+    "        dice_score = dice_per_class[1]# Only use foreground class\n",
     "    else:\n",
-    "        dice_score = dice_per_class.mean()  # Average over all classes\n",
+    "        dice_score = dice_per_class.mean()# Average over all classes\n",
     "\n",
     "    if return_iou:\n",
     "        union = cardinality - intersection\n",
     "        iou_per_class = (intersection + epsilon) / (union + epsilon)\n",
-    "        iou_score = iou_per_class.mean()\n",
+    "        if probs.shape[1] == 2:\n",
+    "            iou_score = iou_per_class[1]# Only foreground class\n",
+    "        else:\n",
+    "            iou_score = iou_per_class.mean()# Average over all classes\n",
     "        return dice_score, iou_score\n",
     "    \n",
     "    return dice_score\n",
     "\n",
-    "def dice_loss(logits, targets, num_classes, epsilon=1e-6):\n",
+    "def dice_loss(logits, targets, num_classes, epsilon=1e-6, return_metrics = False):\n",
     "    \"\"\" \n",
     "    Computes multi-class Dice loss.\n",
     "\n",
@@ -734,17 +737,20 @@
     "    # Apply softmax to logits\n",
     "    probs = F.softmax(logits, dim=1)# (N, C, H, W)\n",
     "    \n",
-    "    # Calculate per-class Dice score using the helper function\n",
-    "    ### ?? Check whether this work as intended or not ??\n",
-    "    dice_score = compute_dice_iou(probs, targets_one_hot, epsilon)\n",
+    "    if return_metrics:\n",
+    "        # Calculate per-class Dice score using the helper function\n",
+    "        ### ?? Check whether this work as intended or not ??\n",
+    "        dice_score, iou_score = compute_dice_iou(probs, targets_one_hot, epsilon, return_iou=True)\n",
+    "        dice_loss_value = 1. - dice_score\n",
+    "        return dice_loss_value, dice_score, iou_score\n",
     "    \n",
-    "    # calculate the dice score\n",
+    "    # otherwise: (this will not run if return_metrics=1)\n",
+    "    dice_score = compute_dice_iou(probs, targets_one_hot, epsilon, return_iou=False)\n",
     "    dice_loss_value = 1. - dice_score\n",
-    "\n",
     "    return dice_loss_value\n",
     "\n",
     "\n",
-    "def log_cosh_dice_loss(logits, targets, num_classes, epsilon=1e-6):\n",
+    "def log_cosh_dice_loss(logits, targets, num_classes, epsilon=1e-6, return_metrics=False):\n",
     "    \"\"\"\n",
     "    Computes log-cosh of the multi-class Dice loss.\n",
     "\n",
@@ -753,12 +759,20 @@
     "        targets: Tensor of shape (N, H, W)\n",
     "        num_classes: int\n",
     "        epsilon: float\n",
+    "        return_metrics: bool — whether to also return dice and IoU scores\n",
     "\n",
     "    Returns:\n",
-    "        Scalar log-cosh Dice loss\n",
+    "        Scalar log-cosh Dice loss or tuple(loss, dice_score, iou_score)\n",
     "    \"\"\"\n",
-    "    dice = dice_loss(logits, targets, num_classes, epsilon)\n",
-    "    return torch.log(torch.cosh(dice))\n"
+    "    if return_metrics:\n",
+    "        # dice_loss returns (loss, dice_score, iou_score)\n",
+    "        dice_loss_value, dice_score, iou_score = dice_loss(logits, targets, num_classes, epsilon, return_metrics=True)\n",
+    "        log_cosh_loss = torch.log(torch.cosh(dice_loss_value))\n",
+    "        return log_cosh_loss, dice_score, iou_score\n",
+    "    # Normal case\n",
+    "    dice_loss_value = dice_loss(logits, targets, num_classes, epsilon, return_metrics=False)\n",
+    "    log_cosh_loss = torch.log(torch.cosh(dice_loss_value))\n",
+    "    return log_cosh_loss"
    ]
   },
   {
@@ -1211,38 +1225,51 @@
     "                criterion, num_epoch,\n",
     "                dataloaders, \n",
     "                scheduler=None,device='cuda',\n",
-    "                model_kwargs = None):\n",
+    "                model_kwargs = None,\n",
+    "                criterion_kwargs= {\"num_classes\": 2, \"epsilon\": 1e-6}):\n",
     "        \n",
     "        self.model = model\n",
     "        self.optimizer = optimizer\n",
     "        self.lr = lr\n",
     "        self.criterion = criterion\n",
+    "        self.criterion_kwargs= criterion_kwargs \n",
     "        self.num_epoch = num_epoch\n",
     "        self.dataloaders = dataloaders\n",
     "        self.scheduler = scheduler\n",
     "        self.device = device\n",
     "        self.model_kwargs = model_kwargs if model_kwargs is not None else {}\n",
+    "        \n",
+    "        # Calculate and store dataset sizes:\n",
+    "        self.dataset_sizes = {split: len(dataloader.dataset) for split, dataloader in dataloaders.items()}\n",
     "\n",
     "        ## error terms:\n",
     "        self.train_error_epoch_list = []\n",
     "        self.val_error_epoch_list = []\n",
     "\n",
+    "        ## metrics lists:\n",
+    "        self.val_dice_epoch_list = []\n",
+    "        self.val_iou_epoch_list = []\n",
+    "\n",
     "    ## these are the train, train_epoch and val_epoch functions we need:\n",
     "    def train(self):\n",
-    "        for i in range(self.num_epoch):\n",
+    "        for _ in range(self.num_epoch):\n",
     "            # train and validation step for i'th epoch\n",
     "            avg_epoch_train_loss = self.train_epoch()\n",
-    "            avg_epoch_val_loss = self.val_epoch()\n",
+    "            avg_epoch_val_loss, avg_epoch_val_dice, avg_epoch_val_iou = self.val_epoch()# unpack all three values returned by val_epoch\n",
+    "            \n",
     "            # accumulate losses\n",
     "            self.train_error_epoch_list.append(avg_epoch_train_loss)\n",
     "            self.val_error_epoch_list.append(avg_epoch_val_loss)\n",
     "\n",
+    "            # accumulate metrics\n",
+    "            self.val_dice_epoch_list.append(avg_epoch_val_dice)\n",
+    "            self.val_iou_epoch_list.append(avg_epoch_val_iou)\n",
+    "\n",
     "    def train_epoch(self):\n",
     "        # training mode\n",
     "        self.model.train()  \n",
-    "        # initialise cumulative loss and num_minibatch counter\n",
+    "        # initialise cumulative loss\n",
     "        loss_ith_epoch_minibatch_cummul = 0.0\n",
-    "        num_minibatches_train = 0\n",
     "        \n",
     "        for minibatch_input, truth in self.dataloaders['train']:\n",
     "            # move data to device\n",
@@ -1252,25 +1279,28 @@
     "            # forward pass\n",
     "            output_minibatch = self.model(minibatch_input, **self.model_kwargs)\n",
     "            # calculate loss\n",
-    "            loss_ith_epoch_minibatch = self.criterion(output_minibatch, truth)\n",
+    "            loss_ith_epoch_minibatch = self.criterion(output_minibatch, truth, **self.criterion_kwargs)\n",
     "            # backward pass\n",
     "            loss_ith_epoch_minibatch.backward()\n",
     "            # optimizer step\n",
     "            self.optimizer.step()\n",
     "            # accumulate the loss for average calculation later\n",
-    "            loss_ith_epoch_minibatch_cummul += loss_ith_epoch_minibatch.item()\n",
-    "            num_minibatches_train += 1\n",
-    "        # calculate average train loss for the epoch\n",
-    "        avg_epoch_train_loss = loss_ith_epoch_minibatch_cummul / num_minibatches_train if num_minibatches_train > 0 else 0\n",
-    "        return avg_epoch_train_loss # return average train epoch loss\n",
+    "            batch_size = minibatch_input.size(0)\n",
+    "            loss_ith_epoch_minibatch_cummul += loss_ith_epoch_minibatch.item() * batch_size\n",
     "\n",
+    "        # calculate average train loss for the epoch\n",
+    "        avg_epoch_train_loss = loss_ith_epoch_minibatch_cummul / self.dataset_sizes['train'] if self.dataset_sizes['train'] > 0 else 0 \n",
+    "        # return weighted average train epoch loss\n",
+    "        return avg_epoch_train_loss\n",
     "\n",
     "    def val_epoch(self):\n",
     "        # evaluation mode\n",
     "        self.model.eval()  \n",
     "        # initialise cumulative loss and num_minibatch counter\n",
     "        loss_ith_epoch_minibatch_val_cummul = 0.0\n",
-    "        num_minibatches_val = 0\n",
+    "        dice_cum = 0.0 # cumulative\n",
+    "        iou_cum = 0.0 # cumulative\n",
+    "\n",
     "        # no-grad mode\n",
     "        with torch.no_grad():\n",
     "            for minibatch_input, truth in self.dataloaders['val']:\n",
@@ -1278,14 +1308,26 @@
     "                minibatch_input, truth = minibatch_input.to(self.device), truth.to(self.device)\n",
     "                # forward pass\n",
     "                output_val_minibatch = self.model(minibatch_input, **self.model_kwargs)\n",
+    "\n",
     "                # validation loss\n",
-    "                loss_val = self.criterion(output_val_minibatch, truth)\n",
+    "                loss_val, dice_score, iou_score = self.criterion(output_val_minibatch, truth,\n",
+    "                                    **{**self.criterion_kwargs, \"return_metrics\": True})\n",
+    "                \n",
+    "                batch_size = minibatch_input.size(0)\n",
     "                # accumulate loss for average caln later\n",
-    "                loss_ith_epoch_minibatch_val_cummul += loss_val.item()\n",
-    "                num_minibatches_val += 1\n",
+    "                loss_ith_epoch_minibatch_val_cummul += loss_val.item() * batch_size\n",
+    "                # accumulate metrics\n",
+    "                dice_cum += dice_score.item() if isinstance(dice_score, torch.Tensor) else dice_score\n",
+    "                iou_cum += iou_score.item() if isinstance(iou_score, torch.Tensor) else iou_score\n",
+    "\n",
     "        # calculate average val loss for the epoch\n",
-    "        avg_epoch_val_loss = loss_ith_epoch_minibatch_val_cummul / num_minibatches_val if num_minibatches_val > 0 else 0\n",
-    "        return avg_epoch_val_loss # return average val epoch loss\n",
+    "        avg_epoch_val_loss = loss_ith_epoch_minibatch_val_cummul / self.dataset_sizes['val'] if self.dataset_sizes['val'] > 0 else 0\n",
+    "        # calculate average metrics\n",
+    "        avg_dice = dice_cum / self.dataset_sizes['val'] if self.dataset_sizes['val'] > 0 else 0\n",
+    "        avg_iou = iou_cum / self.dataset_sizes['val'] if self.dataset_sizes['val'] > 0 else 0\n",
+    "\n",
+    "        return avg_epoch_val_loss, avg_dice, avg_iou # return average val epoch loss\n",
+    "        #return avg_epoch_val_loss \n",
     "\n",
     "\n",
     "    def test(self):\n",
