add code for optuna hp optimisation and wandb

--- a/training_lora.ipynb
+++ b/training_lora.ipynb
@@ -9,8 +9,13 @@
    "source": [
     "# basic torch\n",
     "import torch\n",
+    "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader\n",
     "import matplotlib.pyplot as plt\n",
+    "import torch.optim as optim\n",
+    "\n",
+    "# hyperparameter optimization rtd\n",
+    "import optuna\n",
     "\n",
     "# os related\n",
     "import os\n",
@@ -268,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "03de68d0",
    "metadata": {},
    "outputs": [
@@ -421,7 +426,7 @@
     }
    ],
    "source": [
-    "trainer_seg_model.train()"
+    "# trainer_seg_model.train() "
    ]
   },
   {
@@ -579,6 +584,236 @@
    ],
    "source": [
     "plot_segmentation_batch(minibatch_input, truth, output_val_minibatch, num_samples=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c32dea8",
+   "metadata": {},
+   "source": [
+    "Tasks for Neel:\n",
+    "\n",
+    "1. Look into the potential hyperparameters and then create a wandb script to carry out hyperparameter optimization.\n",
+    "    * ~~Add regularisation provision in the custom head.~~\n",
+    "    * ~~Once again look into the objective functions for training and then evaluation metric using the test dataset (because the loss function won't be used for characterising the quality of the training). Maybe we can also use them for training.~~\n",
+    "    * I need to set up code for optuna based hyperparameter search.\n",
+    "        * ~~Wrote the intial code, Need to finalise it~~\n",
+    "        * Finalised the optuna based hyperparam search code. \n",
+    "            * ALMOST DONE. Need to run it with very small number of training examples to see if it is indeed running or not.\n",
+    "2. Plan out the potential ablation study.\n",
+    "3. Look into other LoRA variants of fine-tuning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3905c035",
+   "metadata": {},
+   "source": [
+    "Code for hyperparameter optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b4d78aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import optuna\n",
+    "import torch.optim as optim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a614c50f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# possible search space:\n",
+    "# search_space = {\n",
+    "#     \"lora_rank\": [4, 8, 16, 32],\n",
+    "#     \"lora_alpha\": [4, 8, 16, 32, 64],# maybe tied to rank\n",
+    "#     \"lora_layers\": [\"all\", \"last_half\", \"last_3\"],# this I need to look into more deeply\n",
+    "\n",
+    "#     \"lr_backbone\": (1e-5, 5e-5), # log scale\n",
+    "#     \"lr_head\": (1e-4, 1e-3), # log scale\n",
+    "#     \"weight_decay\": (1e-4, 1e-2),\n",
+    "\n",
+    "#     \"optimizer\": [\"adamw\", \"adam\"],# seperate optimizers for backbone and head?\n",
+    "\n",
+    "#     \"loss_fn\": [\"cross_entropy\", \"dice\", \"focal\", \"ce+dice\"],# need to look  into it later.\n",
+    "\n",
+    "#     \"batch_size\": [8, 16, 32]\n",
+    "# }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39e787f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wandb "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "779e3cb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assume vit_seg_model, train_dl, val_dl, log_cosh_dice_loss etc. are already defined\n",
+    "\n",
+    "NUM_BLOCKS = 12 # len(vit_pretrained.encoder.layer)\n",
+    "# Deterministic LoRA layer options\n",
+    "LORA_LAYER_OPTIONS= [\n",
+    "        list(range(3)),                       # first 3 layers\n",
+    "        list(range(NUM_BLOCKS-3, NUM_BLOCKS)),# last 3 layers\n",
+    "        list(range(6)),                       # first 6 layers\n",
+    "        list(range(NUM_BLOCKS-6, NUM_BLOCKS)) # last 6 layers\n",
+    "]\n",
+    "\n",
+    "def objective(trial, optimize_for=\"loss\"):\n",
+    "    # Sample hyperparameters\n",
+    "    lora_rank = trial.suggest_categorical(\"lora_rank\", [4, 8, 16])\n",
+    "    lora_alpha = trial.suggest_categorical(\"lora_alpha\", [4, 8, 16, 32])\n",
+    "    \n",
+    "    lora_layers = trial.suggest_categorical(\"lora_layers\", LORA_LAYER_OPTIONS)\n",
+    "    \n",
+    "    lr = trial.suggest_loguniform(\"lr\", 1e-5, 1e-3)\n",
+    "    weight_decay = trial.suggest_loguniform(\"weight_decay\", 1e-4, 1e-2)# L2 decay\n",
+    "    optimizer_name = trial.suggest_categorical(\"optimizer\", [\"adamw\", \"adam\"]) \n",
+    "    \n",
+    "    batch_size = trial.suggest_categorical(\"batch_size\", [8, 16, 24, 32])\n",
+    "    dropout_prob = trial.suggest_categorical(\"dropout_prob\", [0.0, 0.15])\n",
+    "    use_batchnorm = trial.suggest_categorical(\"use_batchnorm\", [True, False])\n",
+    "\n",
+    "    # W&B setup\n",
+    "    wandb.init(\n",
+    "        project=\"Lora_vit_segmentation\",\n",
+    "        config={\n",
+    "            \"lora_rank\": lora_rank,\n",
+    "            \"lora_alpha\": lora_alpha,\n",
+    "            \"lora_layers\": lora_layers,\n",
+    "            \"lr\": lr,\n",
+    "            \"weight_decay\": weight_decay,\n",
+    "            \"optimizer\": optimizer_name,\n",
+    "            \"batch_size\": batch_size,\n",
+    "            \"dropout_prob\": dropout_prob,\n",
+    "            \"use_batchnorm\": use_batchnorm,\n",
+    "            \"num_epochs\": 10\n",
+    "        },\n",
+    "        reinit=True # This ensures that a new W&B run is created for each Optuna trial.\n",
+    "    )\n",
+    "\n",
+    "    # Create model with current trial's hyperparameters\n",
+    "    lora_vit_base = LoraVit(vit_model=vit_pretrained,\n",
+    "                            r=lora_rank, alpha=lora_alpha,\n",
+    "                            lora_layers=lora_layers)\n",
+    "    \n",
+    "    seg_head = CustomSegHead(hidden_dim=768, num_classes=3,                 patch_size=16,image_size=224,\n",
+    "                            dropout_prob=dropout_prob, use_batchnorm=use_batchnorm)\n",
+    "    \n",
+    "    vit_seg_model = SegViT(vit_model=lora_vit_base,\n",
+    "                        image_size=224, patch_size=16,\n",
+    "                        dim=768, n_classes=3,\n",
+    "                        head=seg_head)\n",
+    "\n",
+    "    # Create dataloaders with sampled batch size \n",
+    "    train_dl, val_dl, _ = get_pet_dataloaders(\n",
+    "        image_folder=image_folder,\n",
+    "        mask_folder=trimap_folder,\n",
+    "        DatasetClass=PreprocessedPetDataset,\n",
+    "        all_data=False,\n",
+    "        num_datapoints=80,\n",
+    "        batch_size=batch_size\n",
+    "    )\n",
+    "\n",
+    "    # Setup optimizer\n",
+    "    optimizer_cls = torch.optim.AdamW if optimizer_name == \"adamw\" else torch.optim.Adam\n",
+    "    optimizer = optimizer_cls(vit_seg_model.parameters(), lr=lr, weight_decay=weight_decay)\n",
+    "\n",
+    "    # Trainer\n",
+    "    trainer_input_params = {\n",
+    "        \"model\": vit_seg_model,\n",
+    "        \"optimizer\": optimizer,\n",
+    "        \"lr\": lr,\n",
+    "        \"criterion\": log_cosh_dice_loss,\n",
+    "        \"num_epoch\": 10,\n",
+    "        \"dataloaders\": {\"train\": train_dl, \"val\": val_dl},\n",
+    "        \"use_trap_scheduler\":True,\n",
+    "        \"device\": \"cpu\",\n",
+    "        \"criterion_kwargs\": {\"num_classes\": 3, \"epsilon\": 1e-6}\n",
+    "    }\n",
+    "\n",
+    "    trainer_seg_model = trainer(**trainer_input_params)\n",
+    "    # trainer_seg_model.train() # I had to comment it because for W&B, to log and plot curves in real time, I need to create loopwise functions here\n",
+    "    \n",
+    "    # Training loop with W&B logging\n",
+    "    for epoch in range(trainer_seg_model.num_epoch):\n",
+    "        #  train and validation step for each epoch\n",
+    "        avg_train_loss = trainer_seg_model.train_epoch(epoch)\n",
+    "        avg_val_loss, avg_val_dice, avg_val_iou = trainer_seg_model.val_epoch()# unpack all three values returned by val_epoch\n",
+    "\n",
+    "        # accumulate losses\n",
+    "        trainer_seg_model.train_error_epoch_list.append(avg_train_loss)\n",
+    "        trainer_seg_model.val_error_epoch_list.append(avg_val_loss)\n",
+    "        # accumulate metrics\n",
+    "        trainer_seg_model.val_dice_epoch_list.append(avg_val_dice)\n",
+    "        trainer_seg_model.val_iou_epoch_list.append(avg_val_iou)\n",
+    "\n",
+    "        # log to W&B\n",
+    "        wandb.log({\n",
+    "            \"epoch\": epoch + 1,\n",
+    "            \"train_loss\": avg_train_loss,\n",
+    "            \"val_loss\": avg_val_loss,\n",
+    "            \"val_dice\": avg_val_dice,\n",
+    "            \"val_iou\": avg_val_iou,\n",
+    "            \"lr\": optimizer.param_groups[0][\"lr\"]\n",
+    "        })\n",
+    "\n",
+    "\n",
+    "    # after we train(), in the class trainer_seg_model, validation loss and validation metrics are stored for each epoch as class attributes\n",
+    "    if optimize_for == \"loss\":\n",
+    "        result = trainer_seg_model.val_error_epoch_list[-1]\n",
+    "    elif optimize_for == \"dice\":\n",
+    "        result = trainer_seg_model.val_dice_epoch_list[-1]\n",
+    "    elif optimize_for == \"iou\":\n",
+    "        result = trainer_seg_model.val_iou_epoch_list[-1]\n",
+    "    else:\n",
+    "        raise ValueError(f\"Unknown optimize_for='{optimize_for}'\")\n",
+    "\n",
+    "    # finish W&B run\n",
+    "    wandb.finish()\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c94c66f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimize for loss\n",
+    "study = optuna.create_study(direction=\"minimize\")\n",
+    "study.optimize(lambda trial: objective(trial, optimize_for=\"loss\"), n_trials=20)\n",
+    "\n",
+    "# Optimize for dice\n",
+    "study = optuna.create_study(direction=\"maximize\")\n",
+    "study.optimize(lambda trial: objective(trial, optimize_for=\"dice\"), n_trials=20)\n",
+    "\n",
+    "# Optimize for IoU\n",
+    "study = optuna.create_study(direction=\"maximize\")\n",
+    "study.optimize(lambda trial: objective(trial, optimize_for=\"iou\"), \n",
+    "            n_trials=20)\n",
+    "\n",
+    "# Print best hyperparameters\n",
+    "print(study.best_params)"
    ]
   }
  ],
