--- a/training_lora.ipynb
+++ b/training_lora.ipynb
@@ -16,6 +16,7 @@
     "\n",
     "# hyperparameter optimization rtd\n",
     "import optuna\n",
+    "import wandb\n",
     "\n",
     "# os related\n",
     "import os\n",
@@ -25,6 +26,7 @@
     "# segmentation model\n",
     "from lora_vit import LoraVit\n",
     "from segmentation_model import SegViT\n",
+    "from segmentation_head import CustomSegHead\n",
     "\n",
     "# dataset class\n",
     "from pet_dataset_class import PreprocessedPetDataset\n",
@@ -75,23 +77,36 @@
     "model_name = 'google/vit-base-patch16-224'\n",
     "\n",
     "image_processor = ViTImageProcessor.from_pretrained(model_name)\n",
-    "vit_pretrained = ViTModel.from_pretrained(model_name)\n",
+    "VIT_PRETRAINED = ViTModel.from_pretrained(model_name)\n",
     "vit_pretrained_2 = ViTModel.from_pretrained(model_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "41a51261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CHECKING SOMETHING\n",
+    "# {'lora_rank': 4, 'lora_alpha': 4, 'lora_layers': [6, 7, 8, 9, 10, 11], 'lr': 0.0003111593560386509, 'weight_decay': 0.0006003342110635857, 'optimizer': 'adam', 'batch_size': 32, 'dropout_prob': 0.15, 'use_bn': False} \n",
+    "# lora_vit_base_check= LoraVit(vit_model=VIT_PRETRAINED,\n",
+    "#                             r=4, alpha=4, lora_layers=[6,7,8,9,10,11])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3e0798fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# instantiating the lora vit based backbone model\n",
-    "lora_vit_base = LoraVit(vit_model=vit_pretrained,\n",
-    "                        r=4,alpha = 16, lora_layers = [1,2,3,4])\n",
+    "# lora_vit_base = LoraVit(vit_model=VIT_PRETRAINED,\n",
+    "#                         r=4,alpha = 16, lora_layers = [1,2,3,4])\n",
     "\n",
-    "lora_vit_base2 = LoraVit(vit_model=vit_pretrained_2,\n",
-    "                        r=4,alpha = 16, lora_layers = [1])"
+    "# lora_vit_base2 = LoraVit(vit_model=vit_pretrained_2,\n",
+    "#                         r=4,alpha = 16, lora_layers = [1])"
    ]
   },
   {
@@ -114,16 +129,6 @@
    "source": [
     "# number of trainable parameters\n",
     "lora_vit_base.num_trainable_params, lora_vit_base2.num_trainable_params "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "713485aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from segmentation_head import CustomSegHead"
    ]
   },
   {
@@ -431,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "0b24b2a7",
    "metadata": {},
    "outputs": [],
@@ -442,7 +447,7 @@
     "    for minibatch_input, truth in trainer_seg_model.dataloaders[\"train\"]:\n",
     "        minibatch_input, truth = minibatch_input.to(\"cpu\"), truth.to(\"cpu\")\n",
     "        output_val_minibatch = trainer_seg_model.model(minibatch_input)\n",
-    "        break\n"
+    "        break"
    ]
   },
   {
@@ -615,17 +620,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b4d78aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import optuna\n",
-    "import torch.optim as optim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a614c50f",
    "metadata": {},
    "outputs": [],
@@ -650,12 +644,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "39e787f6",
+   "execution_count": 4,
+   "id": "9642a097",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m If you're specifying your api key in code, ensure this code is not shared publicly.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: C:\\Users\\NEELKANTH RAWAT\\.netrc\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mneelkanth-rawat\u001b[0m (\u001b[33mnetwork-to-network\u001b[0m) to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wandb.login(key=\"b47c50d9d7a54018ff9133f43a7d0d5ce08cdb1e\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "278577ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wandb "
+    "# get path of image and mask files\n",
+    "try:\n",
+    "    base_dir = os.path.dirname(os.path.abspath(__file__))\n",
+    "except NameError:\n",
+    "    # __file__ is not defined (e.g. in Jupyter notebook or interactive sessions apparently), fallback to cwd\n",
+    "    base_dir = os.getcwd()\n",
+    "\n",
+    "# Suppose your dataset is in a folder named 'data' inside the project root:\n",
+    "data_dir = os.path.join(base_dir, 'data_oxford_iiit')\n",
+    "\n",
+    "# # Then you can define image and trimap paths relative to that\n",
+    "image_folder = os.path.join(data_dir, 'resized_images')\n",
+    "trimap_folder = os.path.join(data_dir, 'resized_masks')"
    ]
   },
   {
@@ -665,15 +702,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assume vit_seg_model, train_dl, val_dl, log_cosh_dice_loss etc. are already defined\n",
-    "\n",
     "NUM_BLOCKS = 12 # len(vit_pretrained.encoder.layer)\n",
     "# Deterministic LoRA layer options\n",
-    "LORA_LAYER_OPTIONS= [\n",
-    "        list(range(3)),                       # first 3 layers\n",
-    "        list(range(NUM_BLOCKS-3, NUM_BLOCKS)),# last 3 layers\n",
-    "        list(range(6)),                       # first 6 layers\n",
-    "        list(range(NUM_BLOCKS-6, NUM_BLOCKS)) # last 6 layers\n",
+    "LORA_LAYER_OPTIONS = [\n",
+    "    tuple(range(3)),                       # first 3 layers\n",
+    "    tuple(range(NUM_BLOCKS-3, NUM_BLOCKS)),# last 3 layers\n",
+    "    tuple(range(6)),                       # first 6 layers\n",
+    "    tuple(range(NUM_BLOCKS-6, NUM_BLOCKS)) # last 6 layers\n",
     "]\n",
     "\n",
     "def objective(trial, optimize_for=\"loss\"):\n",
@@ -683,13 +718,13 @@
     "    \n",
     "    lora_layers = trial.suggest_categorical(\"lora_layers\", LORA_LAYER_OPTIONS)\n",
     "    \n",
-    "    lr = trial.suggest_loguniform(\"lr\", 1e-5, 1e-3)\n",
-    "    weight_decay = trial.suggest_loguniform(\"weight_decay\", 1e-4, 1e-2)# L2 decay\n",
+    "    lr = trial.suggest_float(\"lr\", 1e-5, 1e-3, log=True)\n",
+    "    weight_decay = trial.suggest_float(\"weight_decay\", 1e-4, 1e-2, log=True)# L2 decay\n",
     "    optimizer_name = trial.suggest_categorical(\"optimizer\", [\"adamw\", \"adam\"]) \n",
     "    \n",
-    "    batch_size = trial.suggest_categorical(\"batch_size\", [8, 16, 24, 32])\n",
-    "    dropout_prob = trial.suggest_categorical(\"dropout_prob\", [0.0, 0.15])\n",
-    "    use_batchnorm = trial.suggest_categorical(\"use_batchnorm\", [True, False])\n",
+    "    batch_size = trial.suggest_categorical(\"batch_size\", [8, 16,24])#, 24, 32])\n",
+    "    dropout_rate = trial.suggest_categorical(\"dropout_rate\", [0.0, 0.15])\n",
+    "    use_bn = trial.suggest_categorical(\"use_bn\", [True, False])\n",
     "\n",
     "    # W&B setup\n",
     "    wandb.init(\n",
@@ -702,20 +737,22 @@
     "            \"weight_decay\": weight_decay,\n",
     "            \"optimizer\": optimizer_name,\n",
     "            \"batch_size\": batch_size,\n",
-    "            \"dropout_prob\": dropout_prob,\n",
-    "            \"use_batchnorm\": use_batchnorm,\n",
-    "            \"num_epochs\": 10\n",
+    "            \"dropout_rate\": dropout_rate,\n",
+    "            \"use_bn\": use_bn,\n",
+    "            \"num_epochs\": 5\n",
     "        },\n",
-    "        reinit=True # This ensures that a new W&B run is created for each Optuna trial.\n",
+    "        reinit='finish_previous' # This ensures that a new W&B run is created for each Optuna trial.\n",
     "    )\n",
     "\n",
     "    # Create model with current trial's hyperparameters\n",
-    "    lora_vit_base = LoraVit(vit_model=vit_pretrained,\n",
+    "    image_processor = ViTImageProcessor.from_pretrained(model_name)\n",
+    "    Vit_pretrained = ViTModel.from_pretrained(model_name)\n",
+    "    lora_vit_base = LoraVit(vit_model=Vit_pretrained,# this vit_pretrained is defined globally (in cell number 3)\n",
     "                            r=lora_rank, alpha=lora_alpha,\n",
     "                            lora_layers=lora_layers)\n",
     "    \n",
     "    seg_head = CustomSegHead(hidden_dim=768, num_classes=3,                 patch_size=16,image_size=224,\n",
-    "                            dropout_prob=dropout_prob, use_batchnorm=use_batchnorm)\n",
+    "                            dropout_rate=dropout_rate, use_bn=use_bn)\n",
     "    \n",
     "    vit_seg_model = SegViT(vit_model=lora_vit_base,\n",
     "                        image_size=224, patch_size=16,\n",
@@ -728,7 +765,9 @@
     "        mask_folder=trimap_folder,\n",
     "        DatasetClass=PreprocessedPetDataset,\n",
     "        all_data=False,\n",
-    "        num_datapoints=80,\n",
+    "        num_datapoints=25,\n",
+    "        val_ratio=0.2,\n",
+    "        test_ratio=0.1,\n",
     "        batch_size=batch_size\n",
     "    )\n",
     "\n",
@@ -742,7 +781,7 @@
     "        \"optimizer\": optimizer,\n",
     "        \"lr\": lr,\n",
     "        \"criterion\": log_cosh_dice_loss,\n",
-    "        \"num_epoch\": 10,\n",
+    "        \"num_epoch\": 5,\n",
     "        \"dataloaders\": {\"train\": train_dl, \"val\": val_dl},\n",
     "        \"use_trap_scheduler\":True,\n",
     "        \"device\": \"cpu\",\n",
@@ -787,7 +826,7 @@
     "        raise ValueError(f\"Unknown optimize_for='{optimize_for}'\")\n",
     "\n",
     "    # finish W&B run\n",
-    "    wandb.finish()\n",
+    "    wandb.finish() \n",
     "\n",
     "    return result"
    ]
@@ -800,18 +839,38 @@
    "outputs": [],
    "source": [
     "# Optimize for loss\n",
+    "N_TRIALS=5\n",
     "study = optuna.create_study(direction=\"minimize\")\n",
-    "study.optimize(lambda trial: objective(trial, optimize_for=\"loss\"), n_trials=20)\n",
-    "\n",
+    "study.optimize(lambda trial: objective(trial, optimize_for=\"loss\"), n_trials=N_TRIALS)\n",
+    "# Print best hyperparameters\n",
+    "print(study.best_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11b364dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Optimize for dice\n",
     "study = optuna.create_study(direction=\"maximize\")\n",
-    "study.optimize(lambda trial: objective(trial, optimize_for=\"dice\"), n_trials=20)\n",
-    "\n",
+    "study.optimize(lambda trial: objective(trial, optimize_for=\"dice\"), n_trials=N_TRIALS)\n",
+    "# Print best hyperparameters\n",
+    "print(study.best_params)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9536192d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Optimize for IoU\n",
     "study = optuna.create_study(direction=\"maximize\")\n",
     "study.optimize(lambda trial: objective(trial, optimize_for=\"iou\"), \n",
-    "            n_trials=20)\n",
-    "\n",
+    "            n_trials=N_TRIALS)\n",
     "# Print best hyperparameters\n",
     "print(study.best_params)"
    ]
