some changes for lr

--- a/training_lora.ipynb
+++ b/training_lora.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3e0798fc",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "dba01742",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "49152"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bf871447",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
        "2655747"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b06fa1aa",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "248939ed",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "2704899"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "9a842be1",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "dcf146c2",
    "metadata": {},
    "outputs": [
@@ -219,8 +219,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] Using only 80 datapoints out of 7390 total files.\n",
-      "train_size: 64, val_size: 8 and test_size: 8\n"
+      "[INFO] Using only 30 datapoints out of 7390 total files.\n",
+      "train_size: 24, val_size: 3 and test_size: 3\n"
      ]
     }
    ],
@@ -231,14 +231,14 @@
     "    mask_folder=trimap_folder,\n",
     "    DatasetClass=PreprocessedPetDataset,\n",
     "    all_data=False,\n",
-    "    num_datapoints=80, # right now I am just testing whether the things would work or not. I will intentionally overtrain it.\n",
+    "    num_datapoints=30, # right now I am just testing whether the things would work or not. I will intentionally overtrain it.\n",
     "    batch_size=24\n",
     ") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6b05fc42",
    "metadata": {},
    "outputs": [],
@@ -247,9 +247,9 @@
     "trainer_input_params = {\n",
     "    \"model\": vit_seg_model , \n",
     "    \"optimizer\": torch.optim.Adam(vit_seg_model.parameters(), lr=1e-4),\n",
-    "    \"lr\": 1e-4,\n",
+    "    #\"lr\": 1e-4,\n",
     "    \"criterion\": log_cosh_dice_loss,  # or log_cosh_dice_loss, whichever you want to use\n",
-    "    \"num_epoch\": 10,\n",
+    "    \"num_epoch\": 3,\n",
     "    \"dataloaders\": {\n",
     "        \"train\": train_dl,  # replace with your actual DataLoader\n",
     "        \"val\": val_dl       # replace with your actual DataLoader\n",
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "a53da25a",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "03de68d0",
    "metadata": {},
    "outputs": [
@@ -286,140 +286,42 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs:  10%|█         | 1/10 [02:01<18:16, 121.88s/it]"
+      "Epochs:  33%|███▎      | 1/3 [01:22<02:45, 82.91s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10] - Train Loss: 0.1188 | Val Loss: 0.1070 | Dice score: 0.5289955735206604 |IOU score: 0.4027953 \n"
+      "Epoch [1/3] - Train Loss: 0.2235 | Val Loss: 0.1980 | Dice score: 0.3496720790863037 |IOU score: 0.2204217 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs:  20%|██        | 2/10 [03:59<15:56, 119.53s/it]"
+      "Epochs:  67%|██████▋   | 2/3 [03:03<01:33, 93.05s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [2/10] - Train Loss: 0.0889 | Val Loss: 0.0905 | Dice score: 0.5681620240211487 |IOU score: 0.4438759 \n"
+      "Epoch [2/3] - Train Loss: 0.1880 | Val Loss: 0.1723 | Dice score: 0.39602991938591003 |IOU score: 0.2625288 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs:  30%|███       | 3/10 [06:15<14:49, 127.08s/it]"
+      "Epochs: 100%|██████████| 3/3 [04:36<00:00, 92.18s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [3/10] - Train Loss: 0.0718 | Val Loss: 0.0787 | Dice score: 0.5979989171028137 |IOU score: 0.4770078 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs:  40%|████      | 4/10 [08:29<12:57, 129.59s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [4/10] - Train Loss: 0.0623 | Val Loss: 0.0727 | Dice score: 0.6139155626296997 |IOU score: 0.4913191 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs:  50%|█████     | 5/10 [10:31<10:35, 127.06s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [5/10] - Train Loss: 0.0540 | Val Loss: 0.0659 | Dice score: 0.6328734755516052 |IOU score: 0.5109770 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs:  60%|██████    | 6/10 [12:25<08:10, 122.63s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [6/10] - Train Loss: 0.0486 | Val Loss: 0.0606 | Dice score: 0.6484636068344116 |IOU score: 0.5276327 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs:  70%|███████   | 7/10 [14:36<06:15, 125.27s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [7/10] - Train Loss: 0.0450 | Val Loss: 0.0570 | Dice score: 0.6591717600822449 |IOU score: 0.5401515 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs:  80%|████████  | 8/10 [16:48<04:14, 127.47s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [8/10] - Train Loss: 0.0420 | Val Loss: 0.0550 | Dice score: 0.665203869342804 |IOU score: 0.5477003 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs:  90%|█████████ | 9/10 [18:51<02:05, 125.98s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [9/10] - Train Loss: 0.0395 | Val Loss: 0.0544 | Dice score: 0.6673054099082947 |IOU score: 0.5486903 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs: 100%|██████████| 10/10 [21:04<00:00, 126.47s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [10/10] - Train Loss: 0.0383 | Val Loss: 0.0529 | Dice score: 0.6718037724494934 |IOU score: 0.5531836 \n"
+      "Epoch [3/3] - Train Loss: 0.1602 | Val Loss: 0.1517 | Dice score: 0.4350813627243042 |IOU score: 0.3013934 \n"
      ]
     },
     {
@@ -907,10 +809,10 @@
     "2. custom head. \n",
     "    * baseline: Training of just head. [1]\n",
     "    * ~~different learning rate for the segmentation head and viT backbone.~~ [3]\n",
-    "    * when you start training, for the first few steps, freeze the backbone so that the head has chance to adjust to the backbone. [2]\n",
-    "        * once it stabilises, then unfreeze and then use \n",
-    "            1. single learning rate and [2.1]\n",
-    "            2. seperate learning rate. [3.1]\n",
+    "    * ~~when you start training, for the first few steps, freeze the backbone so that the head has chance to adjust to the backbone.~~ [2]\n",
+    "        * ~~once it stabilises, then unfreeze and then use~~ \n",
+    "            1. ~~single learning rate and [2.1]~~\n",
+    "            2. ~~seperate learning rate. [3.1]~~\n",
     "3. Is there some consistent point where these approaches fail.\n",
     "4. ~~Implement serial LoRA [4] (I have begun already)~~\n",
     "5. Maybe I should also look into one more advanced loRA approach to see or design some ablation experiments. # maybe look into that med-adapter appraoch and see what are the results you get from it."
