--- a/training_sep_learning_rate.ipynb
+++ b/training_sep_learning_rate.ipynb
@@ -91,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "<generator object Module.parameters at 0x000001F59F1FB4C0>"
+       "<generator object Module.parameters at 0x0000022536E335A0>"
       ]
      },
      "execution_count": 3,
@@ -112,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "<generator object Module.parameters at 0x000001F59F1FB5A0>"
+       "<generator object Module.parameters at 0x0000022536E33BC0>"
       ]
      },
      "execution_count": 4,
@@ -133,8 +133,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] Using only 80 datapoints out of 7390 total files.\n",
-      "train_size: 64, val_size: 8 and test_size: 8\n"
+      "[INFO] Using only 10 datapoints out of 7390 total files.\n",
+      "train_size: 8, val_size: 1 and test_size: 1\n"
      ]
     }
    ],
@@ -159,14 +159,14 @@
     "    mask_folder=trimap_folder,\n",
     "    DatasetClass=PreprocessedPetDataset,\n",
     "    all_data=False,\n",
-    "    num_datapoints=80, # right now I am just testing whether the things would work or not. I will intentionally overtrain it.\n",
-    "    batch_size=24\n",
+    "    num_datapoints=10, # right now I am just testing whether the things would work or not. I will intentionally overtrain it.\n",
+    "    batch_size=5\n",
     ") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,9 +177,9 @@
     "    {\"params\": vit_seg_model.backbone_parameters, \"lr\": 1e-5},\n",
     "    {\"params\": vit_seg_model.head_parameters, \"lr\": 1e-4},\n",
     "]),\n",
-    "    \"lr\": 1e-4,\n",
+    "    #\"lr\": 1e-4, # I do not think we need to have this learning rate seperately. need to fix it here :)\n",
     "    \"criterion\": log_cosh_dice_loss,  # or log_cosh_dice_loss, whichever you want to use\n",
-    "    \"num_epoch\": 10,\n",
+    "    \"num_epoch\": 3,\n",
     "    \"dataloaders\": {\n",
     "        \"train\": train_dl,  # replace with your actual DataLoader\n",
     "        \"val\": val_dl       # replace with your actual DataLoader\n",
@@ -191,8 +191,21 @@
     "        \"num_classes\": 3,\n",
     "        \"epsilon\": 1e-6,\n",
     "        # \"return_metrics\": False    # usually False for training, True for validation if you want metrics ## WE DO NOT NEED THIS HERE\n",
-    "    }\n",
+    "    },\n",
+    "    \"want_backbone_frozen_initially\": True,\n",
+    "    \"freeze_epochs\":2\n",
     "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e8cd21e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# instantiate the trainer\n",
+    "trainer_seg_model = trainer(**trainer_input_params) "
    ]
   },
   {
@@ -205,140 +218,43 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs:  10%|█         | 1/10 [02:59<26:54, 179.36s/it]"
+      "Epochs:  33%|███▎      | 1/3 [00:43<01:26, 43.28s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10] - Train Loss: 0.2038 | Val Loss: 0.1671 | Dice score: 0.40576425194740295 |IOU score: 0.2783524 \n"
+      "Epoch [1/3] - Train Loss: 0.2264 | Val Loss: 0.2085 | Dice score: 0.3316095769405365 |IOU score: 0.2093176 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs:  20%|██        | 2/10 [05:17<20:38, 154.86s/it]"
+      "Epochs:  67%|██████▋   | 2/3 [01:25<00:42, 42.37s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [2/10] - Train Loss: 0.1452 | Val Loss: 0.1326 | Dice score: 0.47354504466056824 |IOU score: 0.3533309 \n"
+      "Epoch [2/3] - Train Loss: 0.1512 | Val Loss: 0.1899 | Dice score: 0.3639777600765228 |IOU score: 0.2384547 \n",
+      " Unfreezing backbone at epoch 3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs:  30%|███       | 3/10 [07:12<15:57, 136.78s/it]"
+      "Epochs: 100%|██████████| 3/3 [02:34<00:00, 51.37s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [3/10] - Train Loss: 0.1140 | Val Loss: 0.1115 | Dice score: 0.5189403891563416 |IOU score: 0.4039131 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs:  40%|████      | 4/10 [09:04<12:41, 126.92s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [4/10] - Train Loss: 0.0941 | Val Loss: 0.0958 | Dice score: 0.5551862120628357 |IOU score: 0.4378821 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs:  50%|█████     | 5/10 [10:56<10:08, 121.76s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [5/10] - Train Loss: 0.0791 | Val Loss: 0.0860 | Dice score: 0.5792495012283325 |IOU score: 0.4553901 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs:  60%|██████    | 6/10 [12:47<07:51, 117.96s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [6/10] - Train Loss: 0.0714 | Val Loss: 0.0810 | Dice score: 0.5920671224594116 |IOU score: 0.4649752 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs:  70%|███████   | 7/10 [14:49<05:57, 119.28s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [7/10] - Train Loss: 0.0642 | Val Loss: 0.0732 | Dice score: 0.6127362847328186 |IOU score: 0.4891889 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs:  80%|████████  | 8/10 [16:56<04:03, 121.90s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [8/10] - Train Loss: 0.0577 | Val Loss: 0.0685 | Dice score: 0.6257516741752625 |IOU score: 0.5063803 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs:  90%|█████████ | 9/10 [19:11<02:05, 125.86s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [9/10] - Train Loss: 0.0538 | Val Loss: 0.0665 | Dice score: 0.6313516497612 |IOU score: 0.5125546 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs: 100%|██████████| 10/10 [21:16<00:00, 127.67s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [10/10] - Train Loss: 0.0500 | Val Loss: 0.0660 | Dice score: 0.6327686905860901 |IOU score: 0.5116880 \n"
+      "Epoch [3/3] - Train Loss: 0.1212 | Val Loss: 0.1587 | Dice score: 0.4216954708099365 |IOU score: 0.2918825 \n"
      ]
     },
     {
@@ -350,9 +266,20 @@
     }
    ],
    "source": [
-    "# instantiate the trainer\n",
-    "trainer_seg_model = trainer(**trainer_input_params) \n",
     "trainer_seg_model.train() # need to look into this thing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea01ec2b",
+   "metadata": {},
+   "source": [
+    "some other test for the updated trainer class:\n",
+    "\n",
+    "1. test the case when I want to freeze the vit-base for:\n",
+    "        ~~1.1 when optimizer have 2 seperate inputs.~~\n",
+    "        \n",
+    "      ~~1.2 when optimizer have a single input vit_seg_model.parameters()~~"
    ]
   }
  ],
