add train script

--- a/training_replora.ipynb
+++ b/training_replora.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
     "\n",
     "# instantiating the lora vit based backbone model\n",
     "lora_vit_base = RepLoraVit(vit_model=VIT_PRETRAINED,\n",
-    "                        r=4,alpha = 16, lora_layers = [1,2,3,4])\n",
+    "                        r=4,alpha = 16)\n",
     "\n",
     "\n",
     "# # instantiate the custom segmentation head\n",
