change hyperparam optim

--- a/hyperparam_optim_lora_vit.ipynb
+++ b/hyperparam_optim_lora_vit.ipynb
@@ -139,8 +139,8 @@
     "    want_backbone_frozen_initially=False\n",
     "):\n",
     "    # Sample hyperparameters\n",
-    "    lora_rank = trial.suggest_categorical(\"lora_rank\", [4, 8, 16])\n",
-    "    lora_alpha = trial.suggest_categorical(\"lora_alpha\", [4, 8, 16, 32])\n",
+    "    lora_rank = trial.suggest_categorical(\"lora_rank\", [4, 8, 16, 32])\n",
+    "    lora_alpha = trial.suggest_categorical(\"lora_alpha\", [4, 8, 16, 32, 64])\n",
     "    if separate_lr:\n",
     "        lr_backbone = trial.suggest_float(\"lr_vit_backbone\", 1e-5, 1e-3, log=True)\n",
     "        lr_head = trial.suggest_float(\"lr_seg_head\", 1e-4, 1e-3, log=True)\n",
@@ -148,7 +148,7 @@
     "        lr = trial.suggest_float(\"lr\", 1e-5, 1e-3, log=True)\n",
     "    #weight_decay = trial.suggest_float(\"weight_decay\", 1e-4, 1e-2, log=True)# L2 decay\n",
     "    optimizer_name = trial.suggest_categorical(\"optimizer\", [\"adamw\", \"adam\"]) \n",
-    "    batch_size = trial.suggest_categorical(\"batch_size\", [24, 32])\n",
+    "    \n",
     "    #dropout_rate = trial.suggest_categorical(\"dropout_rate\", [0.0, 0.15])\n",
     "    #use_bn = trial.suggest_categorical(\"use_bn\", [True, False])\n",
     "    if lora_type==\"localised_lora\":\n",
@@ -166,8 +166,6 @@
     "        \"lora_rank\": lora_rank,\n",
     "        \"lora_alpha\": lora_alpha,\n",
     "        \"optimizer\": optimizer_name,\n",
-    "        \"batch_size\": batch_size,\n",
-    "        \"separate_lr\": separate_lr,\n",
     "        \"want_backbone_frozen_initially\": want_backbone_frozen_initially,\n",
     "    }\n",
     "    if lora_type == \"localised_lora\":\n",
@@ -186,6 +184,11 @@
     "        })\n",
     "    else:\n",
     "        wandb_config.update({\"lr\": lr})\n",
+    "\n",
+    "    if want_backbone_frozen_initially: \n",
+    "        wandb_config.update({\n",
+    "            \"freeze_epochs\": freeze_epochs\n",
+    "        })\n",
     "    ## Initialize W&B\n",
     "    wandb.init(\n",
     "        project=\"Lora_vit_segmentation\",\n",
@@ -195,13 +198,11 @@
     "\n",
     "    # some other parameters which I have decided to keep fixed\n",
     "    weight_decay=0.0005\n",
+    "    batch_size = 32\n",
     "    use_bn=True\n",
     "    dropout_rate=0.1\n",
     "    num_epoch=50\n",
-    "    if want_backbone_frozen_initially: # I am not quite sure if we want to do it orn\n",
-    "        wandb_config.update({\n",
-    "            \"freeze_epochs\": freeze_epochs\n",
-    "        })\n",
+    "\n",
     "\n",
     "    # Create model with current trial's hyperparameters\n",
     "    Vit_pretrained = ViTModel.from_pretrained(model_name)\n",
